src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --max-width: 1200px;
    --border-radius: 12px;
    --mobile-width: 700px;

    --foreground-light-rgb: 153, 153, 153;
    --foreground-rgb: 102, 102, 102;
    --background-rgb: 245, 245, 244;
    --blue-highlight-rgb: 163, 209, 236;
    --dark-blue-highlight-rgb: calc(163 * 0.9), calc(209 * 0.9), calc(236 * 0.9);

    --font-semibold: 600;
    --font-light: 300;
    --font-regular: 400;
    --font-medium: 500;

    /* side bar buttons */
    --sidebar-border: 1px solid #e7e7e7;
    --sidebar-width: 150px;

    --light-btn-text-rgb: 119, 119, 119;
    --light-btn-bg-rgb: 222, 222, 222;
    --light-btn-border-rgb: 231, 231, 231;
    --light-btn-white-rgb: 255, 255, 255;

    --light-key-default-bg-rgba: 217, 217, 217, 0.3;
    --light-key-hover-bg-rgba: 255, 255, 255, 0.3;
    --light-key-pressed-bg-rgba: 233, 233, 233, 0.3;
    --light-key-selected-bg-rgba: 255, 255, 255, 1;

    --short-transition: background-color 0.2s ease, color 0.2s ease,
      background-image 0.2s ease, scale 0.2s ease, opacity 0.2s ease;
    --long-transition: background-color 0.5s ease, color 0.5s ease,
      background-image 0.5s ease, scale 0.5s ease, opacity 0.5s ease;

    /* nav bar */
    --navbar-text-rgb: 218, 220, 222;
    --navbar-border-radius: 12px;
    --navbar-items-rgba: 0, 0, 0, 0.8;

    /* project page */
    --project-card-bg-rgb: 249, 249, 247;
    --project-card-hover-bg-rgb: 251, 251, 250;
    --project-card-text-rgb: 85, 85, 85;
    --project-card-border: 2px solid #eee;
    --project-card-light-text-rgb: 153, 153, 153;

    --primary-glow: conic-gradient(
      from 180deg at 50% 50%,
      #16abff33 0deg,
      #0885ff33 55deg,
      #54d6ff33 120deg,
      #0071ff33 160deg,
      transparent 360deg
    );
    --secondary-glow: radial-gradient(
      rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 0)
    );

    --tile-start-rgb: 239, 245, 249;
    --tile-end-rgb: 228, 232, 233;
    --tile-border: conic-gradient(
      #00000080,
      #00000040,
      #00000030,
      #00000020,
      #00000010,
      #00000010,
      #00000080
    );

    --callout-rgb: 238, 240, 241;
    --callout-border-rgb: 172, 175, 176;
    --card-rgb: 180, 185, 188;
    --card-border-rgb: 131, 134, 135;
  }

  * {
    scrollbar-gutter: stable;
  }
}

/* scroll bar color for desktop */
@media (min-width: 768px) {
  /* For the scrollbar itself */
  ::-webkit-scrollbar {
    width: 8px; /* width of the entire scrollbar */
  }

  /* For the scrollbar track (the part the scrollbar "slides" on) */
  ::-webkit-scrollbar-track {
    background: rgb(var(--background-rgb)); /* color of the tracking area */
  }

  /* For the scrollbar handle (the part you click on and drag) */
  ::-webkit-scrollbar-thumb {
    background: rgb(222, 222, 222); /* color of the scroll thumb */
    border-radius: 6px; /* roundness of the scroll thumb */
  }

  /* For the scrollbar handle when it's being hovered or clicked */
  ::-webkit-scrollbar-thumb:vertical:hover {
    background: rgb(
      180,
      180,
      180
    ); /* color when hovering over the scroll thumb */
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: rgb(var(--foreground-rgb));
  background: rgb(var(--background-rgb));
}

a {
  color: inherit;
  text-decoration: none;
}

